--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
-
-<html lang="en-US">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumara Prieto - WDD 230 - Book of Mormon - Top 10</title>
-    <meta name="description"
-        content="WDD 230 - Web Frontend Development - Sumara Prieto - Book of Mormon Top 10 assignment portal">
-    <meta name="author" content="Sumara Prieto">
-
-    <meta property="og:title" content="Book of Mormon Top 10 project for WDD 230">
-    <meta property="og:type" content="website">
-    <meta property="og:image"
-        content="https://newsroom.churchofjesuschrist.org/media/960x1280/Callister-2.jpeg">
-    <meta property="og:url" content="https://sumapri.github.io/wdd230/">
-
-    <link rel="stylesheet" href="styles/normalize.css">
+    <title>Favorite BOM App</title>
+    <!-- Meta Author -->
+    <meta name="author" content="Alfonso Scudiero">
+    <!-- Meta Description -->
+    <meta name="description" content="WDD 230 - Web Frontend Development - Alfonso Scudiero - Book of Mormon Favorite Chapter">
+    <!--  Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- External styles -->
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="icon" href="images/favicon.ico">
+    <!--  External Script  -->
+    <script src="scripts/main.js" defer></script>
 </head>
-
 <body>
-
-    <h1>📘 Book of Mormon - Top 10</h1>
-
+    <h1>📖 Book of Mormon - Top 10</h1>
     <main>
         <label for="favchap">Enter Book and Chapter: </label>
-
         <input type="text" id="favchap" placeholder="Alma 5">
         <button type="submit">Add Chapter</button>
-
-        <button id="clear">Clear All</button>
         <ul id="list"></ul>
     </main>
-
-    <script src="scripts/bom.js"></script>
-
 </body>
-
 </html>
