--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <link rel="icon" href="/images/favicon1.ico"
-    
+    <link rel="icon" href="/images/favicon1.ico"    
 </head>
+
 <body>
     
     <header>
@@ -28,10 +28,10 @@
         </div>
         <nav>
             <ul class="navigation">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Join</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Join</a></li>
             </ul>
             <div class="dark-mode-toggle">
                 <input type="checkbox" id="dark-mode" class="dark-mode-checkbox">
@@ -86,7 +86,7 @@
             <div class="footer-title">
                 <h2>Springfield Chamber of Commerce</h2>
             </div>
-            <div class="footer-addr">
+            <div class="footer-add">
                 <h3>Contact</h3>
                 <address>
                   202 S. John Q Hammons Pwy <br>
