--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h2>Missouri Chamber of Commerce</h2>
-                    <p>Our goal is to understand and address the needs and challenges faced by businesses to help them grow and contribute to a healthy regional economy.</p>
+                    <p>Our goal is to understand and address the needs and challenges faced by businesses to help them grow and contribute to a healthy regional economy..</p>
                     <a href="" class="button">Join Us</a>
                 </div>
             </div>
