--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
   <meta name="description" content="WDD 230 - Web Frontend Development. Sumara Prieto. Course assigment portal">
-  <meta name="author" content="Sumara Prieto"/>
+  <meta name="author" content="Sumara Prieto">
   
   <meta property="og:title" content="Sumara Prieto - Web Frontend Project for WDD 230">
-  <meta property="og:type" content="website"/>
+  <meta property="og:type" content="website">
   <meta property="og:url" content="https://sumapri.github.io/wdd230/">
   <meta property="og:image" content="">
 
@@ -47,7 +47,7 @@
       <h3>Learning activities</h3>
       </div>
     <div class="card-content"
-      <ul classes="la-card">
+      <ul> classes="la-card">
          <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
          <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
          <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a>
