--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@
     </ul>
   </nav>
   </header>
-
+  <main class="container-main">
+    <div class="container-main-hero">
+        <picture>
+            <source media="(max-width: 540px)" srcset="images/hero-image-small.webp">
+            <source media="(max-width: 820px)" srcset="images/hero-image-medium.webp">
+            <img src="images/hero-large.webp" id="hero-image"  alt="Kansas City MO Temple" title="Kansas City MO Temple" width="1280" height="800">
+        </picture>
+        <div class="hero-label">
+            <p>Kansas City, MO Temple</p>
+        </div>
+    </div>
 <main>
   <h2 class="attribute">"WDD 230: Web Frontend Development"</h2>
   <div class="card-grid">
