--- a/index.html
+++ b/index.html
@@ -1,111 +1,127 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
-  <meta name="description" content="WDD 230 - Web Frontend Development. Sumara Prieto. Course assigment portal">
+  <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal by Sumara Prieto">
   <meta name="author" content="Sumara Prieto">
-  
-  <meta property="og:title" content="Sumara Prieto - Web Frontend Project for WDD 230">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://sumapri.github.io/wdd230/">
-  <meta property="og:image" content="">
+      <!-- Open Graph Meta Tags -->
+      <meta property="og:title" content="Sumara Prieto - WDD 230 - Web Frontend Development">
+      <meta property="og:type" content="website">
+      <meta property="og:image" content="https://assets.simpleviewinc.com/simpleview/image/upload/c_limit,q_75,w_1200/v1/crm/springfield/bass-pro-exterior-sr-1093-1-_b289f6d1-5056-a348-3ad9c56cf23f0548.jpg"> 
+      <meta property="og:url" content="https://sumapri.github.io/wdd230/">
 
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/larger.css">
-  
+      <link rel="icon" href="favicon.ico">
+
+       <!-- Custom Normalization CSS -->
+    <link rel="stylesheet" href="styles/custom-normalize.css">
+    <!-- Your custom styles -->
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+     <!-- Larger CSS for media queries -->
+     <link rel="stylesheet" href="styles/larger.css">
+        
+   
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 
-<body>
-  <header>
-    <div id="title">
-      <img id="header-picture" src="images/Sumara_Prieto.jpg" alt="Profile Picture" width="200">
-    <h1>Sumara Prieto</h1>
-    <div id="menu"></div>
-    </div>
+  <body>
+    <header class="container-header">
+      <a id="menu" href="#" title="Hamburger menu"></a>
+      <div class="container-header-top">
+      <img src="images/portrait-photo.webp" id="portrait-photo" alt="Photo of Sumara Prieto" width="250" height="239" loading="lazy">
+      <h1>Sumara Prieto</h1>
 
-  <nav>
-    <ul class="navigation">
-      <li><a href="">Home</a></li>
-      <li><a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a></li>
-      <li><a href="chamber/" target="_blank">Chamber</a></li>
-      <li><a href="https://www.byui.edu/">School</a></li>
-      <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng" target="_blank">Scripture</a></li>
-    </ul>
-  </nav>
-  </header>
-  <main class="container-main">
-    <div class="container-main-hero">
-        <picture>
-            <source media="(max-width: 540px)" srcset="images/hero-image-small.webp">
-            <source media="(max-width: 820px)" srcset="images/hero-image-medium.webp">
-            <img src="images/hero-large.webp" id="hero-image"  alt="Kansas City MO Temple" title="Kansas City MO Temple" width="1280" height="800">
-        </picture>
-        <div class="hero-label">
-            <p>Kansas City, MO Temple</p>
-        </div>
-    </div>
-<main>
-  <h2 class="attribute">"WDD 230: Web Frontend Development"</h2>
-  <div class="card-grid">
-     <section class="card">
-      <div class="card-header">
-      <h3>Learning activities</h3>
-      </div>
-    <div class="card-content"
-      <ul> classes="la-card">
-         <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighhouse.png" target="_blank">Lighthouse Test</a></li> 
-         <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
-         <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> | <a href="lesson03/images/landscape.webp">WebP</a>
-          </li>
-         <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
-         <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
-         <li>Week 06</li>
-         <li>Week 07</li>
-         <li>Week 08</li>
-         <li>Week 09</li>
-         <li>Week 10</li>
-         <li>Week 11</li> 
-         <li>Week 12</li>
-         <li>Week 13</li>
-         <li>Week 14</li>
+    <nav>
+      <button id="hamburger" aria-label="Toggle navigation">☰</button>
+      <ul id="nav-links">
+        <li><a href="https://sumapri.github.io/wdd230/">Home</a></li>
+        <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+        <li><a href="chamber/" target="_blank">Chamber</a></li>
+        <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng">Scripture</a></li>
       </ul>
-    </div> 
-  </section>
+    </nav>
+  </header>
 
-    <section class="card">
-      <div class="card-header">
-       <h3>"Information"</h3>   
-      </div>
-      <div class="card-content">
-      </div>
+    <main>
+      <h2>WDD 230: Web Frontend Development</h2>
+      <div class="hero">
+        <picture>
+            <source media="(max-width: 400px)" srcset="images/hero-small.webp">
+            <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
+            <img src="images/kansas-city-temple.jpg" alt="Kansas City Temple" width="960" height="480">
+        </picture>
+        <div class="overlay">Kansas City, MO Temple</div>
+    </div>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+              <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighthouse.png" target="_blank">Lighthouse Test</a></li> 
+              <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
+              <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> | <a href="lesson03/images/landscape.webp">WebP</a>
+               </li>
+              <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
+              <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
+              <li>Week 06: - <a href="lesson06/responsive-images.html">responsive-images</a></li>
+              <li>Week 07</li>
+              <li>Week 08</li>
+              <li>Week 09</li>
+              <li>Week 10</li>
+              <li>Week 11</li> 
+              <li>Week 12</li>
+              <li>Week 13</li>
+              <li>Week 14</li>
+            </ul>
+        </section>
+        <section class="card">
+          <h3>Information</h3>
+            <p>Weather: Placeholder  data - Sunny, 75°F</p>
+            <p>Visits: Placeholder data - 100 visits</p>
+            <p>
+              View the landscape image: 
+              <a href="lesson03/images/landscape.webp" target="_blank">WebP</a>
+          </p>
+        </section> 
+        <section class="card">
+          <h3>Events</h3>
+          <p>Event 1: Placeholder Event - Date & Time</p>
+          <p>Event 2: Placeholder Event - Date & Time</p>
+          <p>Event 3: Placeholder Event - Date & Time</p>
+      </section>
+
+      <section class="card">
+        <h3>Chamber Member Spotlights</h3>
+        <p>Spotlight 1: Placeholder Member - Description</p>
+        <p>Spotlight 2: Placeholder Member - Description</p>
     </section>
-    <div class="map">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" width="600"
+    </main> 
+
+    <!-- Dark Mode Toggle -->
+<div id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
+  <input type="checkbox" id="dark-mode-checkbox">
+  <label for="dark-mode-checkbox">🌙</label>
+</div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" width="600"
        height="450" 
        style="border:0;" 
        allowfullscreen="" 
        loading="lazy" 
-       referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </div>
-</main>
-  
+       referrerpolicy="no-referrer-when-downgrade"></iframe> 
+
   <footer>
-    <div class="footer-info">
-      <div class="copyright">
-       <p><span id="copyright">"Year"</span>
-        .:|:. Sumara Prieto .:|:. Missouri</p>
-      </div>     
-    </div>
-    <p id="lastModified"></p>
+    <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
+        <p id="lastModified"></p>
   </footer>
 
+
   <script src="scripts/getdates.js"></script>
+  <script src="scripts/hamburger.js"></script> <!-- Link to the new hamburger.js -->
+  <script src="scripts/darkMode.js"></script> <!-- Link to darkMode.js -->
 </body>
 </html>
 
