--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <picture>
             <source media="(max-width: 400px)" srcset="images/hero-small.webp">
             <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
-            <img src="images/kansas-city-temple.jpg" alt="Kansas City Temple" width="960" height="480">
+            <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" height="480">
         </picture>
         <div class="overlay">Kansas City, MO Temple</div>
     </div>
