--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div class="container-header-top">
       <img src="images/portrait-photo.webp" id="portrait-photo" alt="Photo of Sumara Prieto" width="250" height="239" loading="lazy">
       <h1>Sumara Prieto</h1>
+    </div>
 
     <nav>
       <button id="hamburger" aria-label="Toggle navigation">☰</button>
@@ -46,16 +47,19 @@
         <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng">Scripture</a></li>
       </ul>
     </nav>
-  </header>
+    </header>
+  
 
-    <main>
+<main>
       <h2>WDD 230: Web Frontend Development</h2>
+
       <div class="hero">
         <picture>
             <source media="(max-width: 400px)" srcset="images/hero-small.webp">
             <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
             <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" height="480">
         </picture>
+
         <div class="overlay">Kansas City, MO Temple</div>
     </div>
         <section class="card">
@@ -99,24 +103,28 @@
         <p>Spotlight 1: Placeholder Member - Description</p>
         <p>Spotlight 2: Placeholder Member - Description</p>
     </section>
-    </main> 
 
     <!-- Dark Mode Toggle -->
-<div id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
+  <div id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
   <input type="checkbox" id="dark-mode-checkbox">
   <label for="dark-mode-checkbox">🌙</label>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" width="600"
+  </div>
+  <section class="map-container">
+    <h2>Location Map</h2>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206055.8390634004!2d-92.436836!3d38.30466245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c0e6d54822e37d%3A0xb55bc4590466bd72!2sMissouri!5e0!3m2!1sen!2sus!4v1728764416011!5m2!1sen!2sus" width="600"
        height="450" 
        style="border:0;" 
        allowfullscreen="" 
        loading="lazy" 
        referrerpolicy="no-referrer-when-downgrade"></iframe> 
+  </section>
 
   <footer>
     <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
-        <p id="lastModified"></p>
+    <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
+    <p id="lastModified"></p>
   </footer>
+</main>
 
 
   <script src="scripts/getdates.js"></script>
