--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <footer>
     <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
     <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
-    <p id="lastModified"></p>
+    <span id="last-modified"></span></p>
   </footer>
 </main>
 
