--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
       <div class="hero">
         <picture>
-            <source media="(max-width: 400px)" srcset="images/hero-small.webp">
-            <source media="(max-width: 960px)" srcset="images/hero-medium.webp">
-            <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" height="480">
+            <source srcset="images/hero-small.webp 400w"media="(max-width: 400px)">
+            <source srcset="images/hero-medium.webp 768w" media="(max-width: 960px)">
+            <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" height="auto;">
         </picture>
 
         <div class="overlay">Kansas City, MO Temple</div>
