--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Springfield Chamber of Commerce</title>
-    <meta name="description" content="Welcome to the Springfield Chamber of Commerce. Join us to connect, collaborate, and grow your business.">
+    <meta name="description" content="Springfield Chamber of Commerce. Join us to connect, collaborate, and grow your business.">
     <meta name="author" content="Sumara Prieto">
     
     <!-- Favicon -->
@@ -12,9 +12,9 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Springfield of Commerce">
+    <meta property="og:title" content="Springfield Chamber of Commerce">
     <meta property="og:description" content="Join the Chamber of Commerce to enhance your business connections.">
-    <meta property="og:image" content="images/hero-image.jpg">
+    <meta property="og:image" content="images/hero-large">
     <meta property="og:url" content="http://www.yourchamberwebsite.com">
 
     <!-- CSS Links -->
