--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Springfield Chamber of Commerce">
     <meta property="og:description" content="Join the Chamber of Commerce to enhance your business connections.">
-    <meta property="og:image" content="images/hero-large">
+    <meta property="og:image" content="images/hero-large.webp">
     <meta property="og:url" content="http://www.yourchamberwebsite.com">
 
     <!-- CSS Links -->
@@ -25,7 +25,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Springfield Chamber of Commerce</h1>
+        <h1>Springfield Chamber of Commerce</h1>
         <img src="images/springfield-chamber-logo.webp" alt="Springfield Chamber of Commerce Logo" id="chamber-logo">
         <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
         <button id="hamburger" aria-label="Toggle navigation">☰</button>
