--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,8 +14,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Springfield Chamber of Commerce">
     <meta property="og:description" content="Join the Chamber of Commerce to enhance your business connections.">
-    <meta property="og:image" content="images/hero-large.webp">
-    <meta property="og:url" content="http://www.yourchamberwebsite.com">
+    <meta property="og:image" content="chamber/images/hero-chamber-large.webp">
+    <meta property="og:url" content="http://www.springfieldchamberwebsite.com">
 
     <!-- CSS Links -->
     <link rel="stylesheet" href="styles/normalize.css">
