--- a/chamber/index.html
+++ b/chamber/index.html
@@ -97,7 +97,9 @@
 
     <footer>
         <p>Contact us: info@springfieldchamberwebsite.com</p>
-        <p> :: Sumara Prieto :: | WDD 230 Project | Last modified: <span id="last-modified"></span></p>
+        <p> :: Sumara Prieto :: </p>
+        <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
+        <span id="last-modified"></span>
     </footer>
 
     <script>
