--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
+  <style>
+    /* Light mode styles */
+    .card a {
+        color: rgb(194, 235, 11); /* Link color in light mode */
+    }
+
+    /* Dark mode styles */
+    @media (prefers-color-scheme: dark) {
+        .card a {
+            color: lightblue; /* Link color in dark mode */
+        }
+    }
+</style>
   <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal by Sumara Prieto">
   <meta name="author" content="Sumara Prieto">
       <!-- Open Graph Meta Tags -->
@@ -122,18 +135,14 @@
   <footer>
     <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
     <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
-    <p id="lastModified"></p>
-    <p>Current Year: <span id="last-modified"></span></p>
+    <span id="last-modified"></span></p>
   </footer>
 </main>
 
-<script>
-  const currentYear = new Date().getFullYear();
-  document.getElementById('currentYear').textContent = currentYear;
-
-  // Get the last modified date and populate the footer
-  document.getElementById('lastModified').textContent = `Last modified: ${document.lastModified}`;
-</script>
+<script> 
+        // Set the last modified date dynamically
+        document.getElementById('last-modified').textContent = document.lastModified;
+    </script>
   <script src="scripts/getdates.js"></script>
   <script src="scripts/hamburger.js"></script> <!-- Link to the new hamburger.js -->
   <script src="scripts/darkMode.js"></script> <!-- Link to darkMode.js -->
