--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       </ul>
     </nav>
     </header>
-  
 
 <main>
       <h2>WDD 230: Web Frontend Development</h2>
@@ -131,13 +130,13 @@
        loading="lazy" 
        referrerpolicy="no-referrer-when-downgrade"></iframe> 
   </section>
+</main>
 
   <footer>
     <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
+    <p id="lastModified"></p>
     <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
-    <span id="last-modified"></span></p>
   </footer>
-</main>
 
 <script> 
         // Set the last modified date dynamically
