--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sumara Prieto - WDD 230 - Web Frontend Development</title>
-  <style>
-    /* Light mode styles */
-    .card a {
-        color: rgb(194, 235, 11); /* Link color in light mode */
-    }
-
-    /* Dark mode styles */
-    @media (prefers-color-scheme: dark) {
-        .card a {
-            color: lightblue; /* Link color in dark mode */
-        }
-    }
-</style>
+  <title>Sumara Prieto - WDD 230 - Web Frontend Development</title> 
+   
   <meta name="description" content="WDD 230 - Web Frontend Development course assignment portal by Sumara Prieto">
   <meta name="author" content="Sumara Prieto">
       <!-- Open Graph Meta Tags -->
@@ -83,7 +71,7 @@
                </li>
               <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
               <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
-              <li>Week 06: - <a href="lesson06/responsive-images.html">responsive-images</a></li>
+              <li>Week 06: - <a href="lesson06/responsive-images.html">Responsive Images</a></li>
               <li>Week 07</li>
               <li>Week 08</li>
               <li>Week 09</li>
@@ -103,18 +91,7 @@
               <a href="lesson03/images/landscape.webp" target="_blank">WebP</a>
           </p>
         </section> 
-        <section class="card">
-          <h3>Events</h3>
-          <p>Event 1: Placeholder Event - Date & Time</p>
-          <p>Event 2: Placeholder Event - Date & Time</p>
-          <p>Event 3: Placeholder Event - Date & Time</p>
-      </section>
 
-      <section class="card">
-        <h3>Chamber Member Spotlights</h3>
-        <p>Spotlight 1: Placeholder Member - Description</p>
-        <p>Spotlight 2: Placeholder Member - Description</p>
-    </section>
 
     <!-- Dark Mode Toggle -->
   <div id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
@@ -133,9 +110,8 @@
 </main>
 
   <footer>
-    <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.<br>Missouri</p>
+    <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.Missouri<img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"</p>
     <p id="lastModified"></p>
-    <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="50" height="30" loading="lazy"
   </footer>
 
 <script> 
