--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <ul>
               <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighthouse.png" target="_blank">Lighthouse Test</a></li> 
               <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
-              <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> | <a href="lesson03/images/landscape.webp">WebP</a>
-               </li>
+              <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> | <a href="lesson03/images/landscape.webp">WebP</a> | <a href="lesson03/">WebP</a> | <a href="lesson03/lazyload.html" target="_blank">Lazy-load </a></li>
               <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
               <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
               <li>Week 06: - <a href="lesson06/responsive-images.html">Responsive Images</a></li>
