--- a/lesson03/lazyload.html
+++ b/lesson03/lazyload.html
@@ -11,12 +11,12 @@
         <h1>Lazy Load Images Demonstration</h1>
     </header>
     <main>
-        <img src="https://picsum.photos/400/600?random=1" alt="Random Image 1" loading="lazy">
-        <img src="https://picsum.photos/400/600?random=2" alt="Random Image 2" loading="lazy">
-        <img src="https://picsum.photos/400/600?random=3" alt="Random Image 3" loading="lazy">
-        <img src="https://picsum.photos/400/600?random=4" alt="Random Image 4" loading="lazy">
-        <img src="https://picsum.photos/400/600?random=5" alt="Random Image 5" loading="lazy">
-        <img src="https://picsum.photos/400/600?random=6" alt="Random Image 6" loading="lazy">
+        <img src="https://loremflickr.com/g/400/600/london" alt="Placeholder London image" loading="lazy">
+        <img src="https://loremflickr.com/g/400/650/london" alt="Placeholder London image" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/g/400/700/london" alt="Placeholder London image" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/g/400/750/london" alt="Placeholder London image"loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/g/400/800/london" alt="Random Image 5" loading="lazy" width="400" height="600">
+        <img src="https://loremflickr.com/g/400/850/london" alt="Placeholder London image" loading="lazy" width="400" height="600">
     </main>
     <footer>
         <p>&copy; 2024 Sumara Prieto. Last modified: <span id="lastModified"></span></p>
