--- a/chamber/index.html
+++ b/chamber/index.html
@@ -105,13 +105,11 @@
         <p>Springfield, MO</p> 
         <p>Phone: 417-5990418</p>
         </div>
-        <div class="footer-update-information">
-            <p>&copy; <span id="currentYear"></span></p>
-            <p>Sumara Prieto - WDD 230</p>
-            <p>Last Modification: <span id="lastModified"></span></p>
-        </div> 
+        <footer>
+            <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.Missouri<img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"</p>
+            <p id="lastModified"></p>
     </footer>
-    <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button
+    <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     
  </body>
 </html>
