--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
       <div class="hero">
         <picture>
-            <source srcset="images/hero-small.webp 400w"media="(max-width: 400px)">
-            <source srcset="images/hero-medium.webp 768w" media="(max-width: 960px)">
-            <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" height="auto;">
+            <source srcset="images/hero-small.webp 400w" sizes="100vw" (max-width: 400px)">
+            <source srcset="images/hero-medium.webp 768w" sizes="100vw" (max-width: 960px)">
+            <img src="lesson06/images/hero-large.webp" alt="Kansas City Temple" width="960" style="height:auto;">
         </picture>
 
         <div class="overlay">Kansas City, MO Temple</div>
