--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     </nav>
     </header>
 
-<main>
+<main class="container-main">
+  
       <h2>WDD 230: Web Frontend Development</h2>
 
       <div class="hero">
