--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
       <div class="hero">
         <picture>
-            <source srcset="images/hero-small.webp 400w" sizes="100vw" (max-width: 400px)">
-            <source srcset="images/hero-medium.webp 768w" sizes="100vw" (max-width: 960px)">
-            <img src="images/hero-large.webp" alt="Kansas City Temple" width="960" style="height:auto;">
+            <source media="(max-width: 540px)" srcset="images/hero-small.webp">
+            <source media="(max-width: 820px)" srcset="images/hero-medium.webp">
+            <img src="images/hero-large.webp" alt="Kansas City Temple" width="1280" height="height:auto;">
         </picture>
 
         <div class="overlay">Kansas City, MO Temple</div>
