--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
 
 
     <!-- Dark Mode Toggle -->
-    <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode">
-      <input type="checkbox" id="dark-mode-checkbox" style="display: none;"> <!-- Hide the checkbox -->
-      🌙
-  </button>
+    <input type="checkbox" id="dark-mode-checkbox" style="display: none;"> <!-- Hide the checkbox -->
+<button id="dark-mode-toggle" aria-label="Toggle Dark Mode" title="Toggle Dark Mode" onclick="toggleDarkMode()">
+    🌙
+</button>
+
 
   <section class="map-container">
     <h2>Location Map</h2>
