--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> 
               <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
               <li>Week 05: - <a href="https://codepen.io/sumapri/pen/gOVRpgg" target="_blank">Book of Mormon - Top 10</a></li>
-              <li>Week 06: <a href="images/landscape.webp">WebP</a></li>
-              <li>Week 07: <a href="lesson07/lazyload.html" target="_blank">Lazy-load </a></li></li>
+              <li>Week 06: <a href="images/landscape.webp">WebP</a> | <a href="lesson06/responsive-image.html" target="_blank">Responsive-images</a></li>
+              <li>Week 07: <a href="lesson07/lazyload.html" target="_blank">Lazy-load</a></li> 
               <li>Week 08</li>
               <li>Week 09</li>
               <li>Week 10</li>
