--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -7,7 +7,7 @@
     <!-- Meta Author -->
     <meta name="author" content="Alfonso Scudiero">
     <!-- Meta Description -->
-    <meta name="description" content="WDD 230 - Web Frontend Development - Alfonso Scudiero - Book of Mormon Favorite Chapter">
+    <meta name="description" content="WDD 230 - Web Frontend Development - Sumara Prieto - Book of Mormon Favorite Chapter">
     <!--  Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- External styles -->
