--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite BOM App</title>
     <!-- Meta Author -->
-    <meta name="author" content="Alfonso Scudiero">
+    <meta name="author" content="Sumara Prieto">
     <!-- Meta Description -->
     <meta name="description" content="WDD 230 - Web Frontend Development - Sumara Prieto - Book of Mormon Favorite Chapter">
     <!--  Favicon -->
