--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favorite BOM App</title>
+    <title>Favorite BOM Scripture</title>
     <!-- Meta Author -->
     <meta name="author" content="Sumara Prieto">
     <!-- Meta Description -->
