--- a/newbom.html
+++ b/newbom.html
@@ -11,14 +11,14 @@
     <!--  Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- External styles -->
-    <link rel="stylesheet" href="newbom.css">
+    <link rel="stylesheet" href="styles/newbom.css">
 </head>
 <body>
   <body>
     <h1>Favorite Book of Mormon Chapters</h1>
     <input type="text" id="favchap" placeholder="Enter chapter">
-    <button>Add Chapter</button>
+    <button>Add Your Favorite Chapter</button>
     <ul id="list"></ul>
-    <script src="newbom.js"></script>
+    <script src="scripts/newbom.js"></script>
 </body>
 </html>
