--- a/chamber/join.html
+++ b/chamber/join.html
@@ -101,6 +101,17 @@
                 <button type="submit">Submit</button>
             </fieldset>
         </form>
+         <!-- Membership Benefits Section -->
+         <div class="membership-benefits">
+            <h3>Membership Levels & Benefits</h3>
+            <ul>
+                <li><strong>NP Membership</strong> - No fee, basic access to resources.</li>
+                <li><strong>Bronze Membership</strong> - Access to events, 10% discount on services.</li>
+                <li><strong>Silver Membership</strong> - All Bronze benefits plus spotlight feature on the homepage.</li>
+                <li><strong>Gold Membership</strong> - All Silver benefits plus exclusive training sessions and event invitations.</li>
+            </ul>
+        </div>
+    </div> <!-- .form-container -->
     </main>
         <div class="footer-image-logo">
             <img src="images/footer-logo.webp" alt="Springfield Chamber of Commerce Logo" width="200" height="150" loading="lazy">
