--- a/chamber/index.html
+++ b/chamber/index.html
@@ -106,8 +106,9 @@
         <p>Phone: 417-5990418</p>
         </div>
         <footer>
-            <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.Missouri<img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"</p>
+            <p>&copy; <span id="currentYear"></span> .:|:. Sumara Prieto .:|:. Missouri <img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
             <p id="lastModified"></p>
+
     </footer>
     <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
     
