--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -13,7 +13,7 @@
     <!-- External styles -->
     <link rel="stylesheet" href="styles/base.css">
     <!--  External Script  -->
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/bom.js" defer></script>
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
