--- a/lesson01/holygrail.html
+++ b/lesson01/holygrail.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-</html>
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header.com</title> <!-- Missing title element added here -->
     <link rel="stylesheet" href="styles/holygrail.css">
 </head>
 
@@ -20,3 +21,5 @@
 
     <footer contenteditable>Footer Content — Header.com</footer>
 </body>
+
+</html>
