--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,9 +23,6 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css"> 
-    <script src="scripts/script.js" defer></script>
-    <script src="scripts/dark-mode.js" defer></script>
-    <script src="scripts/windchill.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Poppins:wght@100;400;500;600;700;800&family=Raleway:wght@100..900&display=swap" rel="stylesheet">
@@ -111,6 +108,8 @@
 
     </footer>
     <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
-    
+    <script src="scripts/script.js" defer></script>
+    <script src="scripts/darkMode.js" defer></script>
+    <script src="scripts/windchill.js" defer></script> 
  </body>
 </html>
