--- a/chamber/index.html
+++ b/chamber/index.html
@@ -108,8 +108,8 @@
 
     </footer>
     <button id="dark-mode-toggle" aria-label="Toggle dark mode">🌙</button>
-    <script src="scripts/script.js" defer></script>
-    <script src="scripts/darkMode.js" defer></script>
-    <script src="scripts/windchill.js" defer></script> 
+    <script src="scripts/script.js"></script>
+    <script src="scripts/darkMode.js"></script>
+    <script src="scripts/windchill.js"></script> 
  </body>
 </html>
