--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +13,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- External styles -->
     <link rel="stylesheet" href="styles/base.css">
-    <!--  External Script  -->
-    <script src="scripts/bom.js" defer></script>
+
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
@@ -23,5 +23,7 @@
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
+    <footer>©️ Sumara Prieto 2024</footer>
+    <script src="scripts/bom.js"></script>
 </body>
 </html>
