--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li>Week 06: <a href="images/landscape.webp">WebP</a> | <a href="lesson06/responsive-image.html" target="_blank">Responsive-images</a></li>
               <li>Week 07: <a href="lesson07/lazyload.html" target="_blank">Lazy-load</a></li> 
               <li>Week 08</li>
-              <li>Week 09: <a href="lesson09/new-ward-members.json" target="_blank">JSON</a> | <a href="lesson09/prophets.html" target="_blank">Prophets</a></li>
+              <li>Week 09: <a href="lesson09/new-ward-members.json" target="_blank">JSON</a> | <a href="lesson09/prophets.html" target="_blank">Latter-day Prophets</a></li>
               <li>Week 10</li>
               <li>Week 11</li> 
               <li>Week 12</li>
