--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
         <div class="overlay">Kansas City, MO Temple</div>
     </div>
+    <div id="links">
+      <!-- The lesson links will be dynamically inserted here -->
+    </div>
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
@@ -81,6 +84,7 @@
               
             </ul>
         </section>
+        
         <section class="card">
           <h3>Information</h3>
           <div class="weather-content">
@@ -127,5 +131,6 @@
   <script src="scripts/darkMode.js"></script> <!-- Link to darkMode.js -->
   <script src="scripts/localStorage.js"></script>
   <script src="scripts/windchill.js"></script>
+  <script src="scripts/links.js"></script>
 </body>
 </html>
