--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <link rel="icon" href="favicon.ico">
 
        <!-- Custom Normalization CSS -->
-    <link rel="stylesheet" href="styles/custom-normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <!-- Your custom styles -->
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
