--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <footer>
     <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.Missouri<img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
-    <p id="lastModified"></p>
+    <p id="last-modified"></p>
   </footer>
 
 <script> 
