--- a/index.html
+++ b/index.html
@@ -123,8 +123,10 @@
   </footer>
 
 <script> 
-        // Set the last modified date dynamically
-        document.getElementById('last-modified').textContent = document.lastModified;
+         const currentYear = new Date().getFullYear();
+  document.getElementById('currentYear').textContent = currentYear;
+
+  document.getElementById('last-modified').textContent = `lastModified: ${document.lastModified}`;
     </script>
   <script src="scripts/getdates.js"></script>
   <script src="scripts/hamburger.js"></script> <!-- Link to the new hamburger.js -->
