--- a/newbom.html
+++ b/newbom.html
@@ -9,7 +9,8 @@
     <!-- Meta Description -->
     <meta name="description" content="WDD 230 - Web Frontend Development - Sumara Prieto - Book of Mormon Favorite Chapter">
     <!--  Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico">
+    
     <!-- External styles -->
     <link rel="stylesheet" href="styles/newbom.css">
 </head>
