--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-              <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighthouse.png" target="_blank">Lighthouse Test</a></li> 
+              <li>Week 01: - <a href="lesson01/holygrail.html" target="_blank">Holygrail Page</a> | <a href="images/lighthouse.png" target="_blank">Lighthouse Test</a> | <a href=" https://codepen.io/sumapri/pen/poMYobR" target="_blank">Applied JavaScript</a></li> 
               <li>Week 02: - <a href="lesson02/design.html" target="_blank">Web Design Principles</a> |<a href="lesson02/media-query.html" target="_blank">Media-Query</a> | <a href="lesson02/design-principles.html" target="_blank">Design Principles Document</a></li>
               <li>Week 03: - <a href="images/css_combinators.png" target="_blank">CSS Combinators</a> | <a href="https://codepen.io/sumapri/pen/JjgEZqr" target="_blank">CSS-Pseudo-Elements</a> | <a href="https://codepen.io/sumapri/pen/YzmZeax" target="_blank">Responsive Menu</a> 
               <li>Week 04: - <a href="https://codepen.io/sumapri/pen/LYwWQrx" target="_blank">CSS Pseudo-Classes</a></li>
