--- a/form.html
+++ b/form.html
@@ -56,8 +56,9 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 WDD 230: Web Frontend Development. All rights reserved.</p>
-    </footer>
+        <p>&copy; <span id="currentYear"></span>.:|:. Sumara Prieto .:|:.Missouri<img src="images/Flag_of_Missouri.svg.png" alt="Flag of Missouri" width="20" height="10" loading="lazy"></p>
+        <p id="last-modified"></p>
+      </footer>
 
     <script>
         // Script to handle password matching
